--- a/src/statics/css/wassberg.css
+++ b/src/statics/css/wassberg.css
@@ -1,110 +1,80 @@
 body {
     text-align: center;
 }
+a:link {color:#000;}      /* unvisited link */
+a:visited {color:#000;}  /* visited link */
+a:hover {color:#000;}  /* mouse over link */
+a:active {color:#000;}  /* selected link */
+
+@font-face {
+    font-family: 'bebas_neueregular';
+    src: url('../fonts/bebasneue-webfont.eot');
+    src: url('../fonts/bebasneue-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/bebasneue-webfont.woff') format('woff'),
+    url('../fonts/bebasneue-webfont.ttf') format('truetype'),
+    url('../fonts/bebasneue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+#primary_header {
+    font-family: 'bebas_neueregular', serif;
+    font-size: 50px;
+    /*text-shadow: 2px 2px 2px #bbb;*/
+    -webkit-text-stroke: 1px rgba(0,0,0,0.1);
+    margin:0px;
+    padding-top: 20px;
+ }
+#secondary_header {
+    font-family: 'bebas_neueregular', serif;
+    font-size: 40px;
+    /*text-shadow: 2px 2px 2px #bbb;*/
+    -webkit-text-stroke: 1px rgba(0,0,0,0.1);
+    margin:0px;
+    padding-bottom: 25px;
+}
+.module_header {
+    margin:0px;
+    padding-bottom: 20px;
+}
 
 .profileImg {
     width: 250px;
 }
 
-#menu {
-    border-bottom: 2px solid #dedede;
-}
-
-#menu_items {
-    padding: 0px;
-    padding-top: 25px;
-    padding-right: 10px;
-    margin: 0px;
-    margin-bottom: 25px;
-}
-
-.menu_item {
-    display: inline-block;
-    margin-left: 10px;
-}
 #container {
-    position:relative;
+    position: relative;
 }
+
 #contentContainer {
     width: 80%;
     margin: 0 auto;
     border-top: 2px solid #dedede;
 }
 
-#infoSpan {
+#menu_wrapper {
     float: left;
     display: inline-block;
-    border-right: 2px solid #dedede;
     margin: 0px auto;
     padding: 0px;
-    margin-right: 20px;
     overflow: hidden;
     min-height: 80%;
 }
 
-#infoContent {
+#menu_info_container {
     margin: 20px;
 }
 
-#feedSpan {
+#module_wrapper {
     margin: 0px auto;
-    padding: 0px;
+    padding: 20px;
     vertical-align: top;
     text-align: left;
     display: block;
     overflow: hidden;
+    border-left: 2px solid #dedede;
+    margin-left: 20px;
 }
-
-#feedContent {
-    margin: 20px 0px;
-}
-
-/*
-
-#sHeader{
-    margin: 0px;
-}
-#sMain{
-    padding-bottom:60px;   */
-/* Height of the footer *//*
-
-}
-
-#sFooter{
-    position:absolute;
-    bottom:0;
-    height:60px;   */
-/* Height of the footer *//*
-
-    padding:30px;
-    margin: 20px 0px;
-    */
-/*z-index:100020;*//*
-
-    border-top: 2px solid #dedede;
-
-}
-#footerspan{
-
-    margin:0 auto;
-    text-align:left;
-    position: relative;
-
-    */
-/*border-style:solid;
-        border-width:medium;*//*
-
-    width: 370px;
-    padding: 0px;
-
-    font-family:"Courier New", sans-serif;
-    font-size:12px;
-
-}
-*/
-
-/*z-index:100020;*/
-
 
 @media only screen and (max-width: 800px), only screen and (max-device-width: 800px) {
     #contentContainer {
@@ -113,7 +83,7 @@ body {
 }
 
 @media only screen and (max-width: 675px), only screen and (max-device-width: 675px) {
-    #infoSpan {
+    #menu_wrapper {
         width: 100%;
         float: right;
         display: inline;
@@ -124,11 +94,12 @@ body {
         margin-bottom: 20px;
     }
 
-    #feedSpan {
+    #module_wrapper {
         float: auto;
         display: inline;
         width: 100%;
         overflow: initial;
+        border-left: 0px solid #dedede;
 
         margin: 0px auto;
         padding: 0px;
@@ -136,6 +107,26 @@ body {
         text-align: left;
         display: block;
         overflow: hidden;
+    }
+    #secondary_header {
+       font-size: 25px;
+    }
+
+    #footer {
+        margin: 0 auto;
+        width:95%;
+    }
+
+    .wrapper {
+        margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
+        padding-bottom: 20px;
+    }
+    #footer, .push {
+        clear:both;
+        height: 55px; /* '.push' must be the same height as 'footer' */
+    }
+    .footer-style {
+        border-top: 2px solid #dedede;
     }
 }
 
